--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     </p>
       <p>This relates to the idea of perspective. Everyone sometimes worries about little things, but when they look at the big picture, they realize how little the thing is. I still care about it, but not very much anymore. I know that it won't make me get an "f" in social sudies.</p>
     <h2> My Stretch </h2>
-      <p> My stretch was reading comprehension. It can strill use quite a bit of work, but I am feeling improvement. Annotating books has helped me, because it is easier for me to remember something that I have written. Also, group discusions have helped.
+      <p> My stretch was reading comprehension. It can still use quite a bit of work, but I am feeling improvement. Annotating books has helped me, because it is easier for me to remember something that I have written. Also, group discusions have helped.
     </p>
-      <p>For example, Reading "Give Me LIberty" and annotating it has helped me understand taxes and their role in causing the revolution.</p>
+      <p>For example, Reading "Give Me Liberty" and annotating it has helped me understand taxes and their role in causing the revolution.</p>
       <h2> My Goal</h2>
-      <p> My goal was to be better prepared for essays. I know that this has improved along with my reading comprehension. Also, just like my stretch, taking notes in books has helped me understand what I am writing better. However, I am still strugling with mechanical errors and going too far off topic.</p>
+      <p> My goal was to be better prepared for essays. I know that this has improved along with my reading comprehension. Also, just like my stretch, taking notes in books has helped me understand what I am writing better. However, I am still struggling with mechanical errors and going too far off topic.</p>
 
     <h2>Reflection</h2>
       <ol>
-      <li>My friend group is wide, but there are challenges with that. Peers are easily accepted sometimes, but at recess, it gets difficult because when so many people play, it gets tricky to encompass everyone.</li><li>Some leadership roles I have taken are: volenteering at Feeding San Diego and working on the netshot rules document to help me and my friends at recess.</li><li>I am very consistant with compleeting my work on time despite having a lot of after school activities.</li></ol>
+      <li>My friend group is wide, but there are challenges with that. Peers are easily accepted sometimes, but at recess, it gets difficult because when so many people play, it gets tricky to encompass everyone.</li><li>Some leadership roles I have taken are: volenteering at Feeding San Diego and working on the netshot rules document to help me and my friends at recess.</li><li>I am very consistant with compleeting my work on time despite having a lot of after school activities. I tend to get tired, and that sometimes hinders me.</li></ol>
  </body>
 </html>
