--- a/mystuff.html
+++ b/mystuff.html
@@ -14,7 +14,7 @@
       <img src="IMG_0194.JPG">
           <img class="s" src="IMG_0195.JPG"></div>
       <p class="bb">My scarlet letter final essay thinking map.</p>
-      <p class="heading"> My Literature artifact is my thinking map for my final Scarlet Letter essay. I chose to show this, because I think that it demonstrates my goal of being better prepared for essays.</p>
+      <p class="heading"> My Literature artifact is my thinking map for my final Scarlet Letter essay. I chose to show this, because I think that it demonstrates my goal of being better prepared for essays. It really helped me write the essay.</p>
       <h2 class="v">Social Studies</h2>
       <div class="center">
       <img src="images/IMG_0192.JPG" alt="w">
@@ -22,12 +22,12 @@
       <p class="bb">My worst annotations on the right and my best on the left.</p><div class="center">
       <img class="z" src="IMG_0200.jpg"></div>
       <p class="e">My Farewell book homework.</p>
-      <p class="heading">I have two social studies artifacts. My Social Studies artifacts are my Farewell homework and my annotations. I am showing my Farewell homework, because two nights before it was due I felt really stressed out about it. Luckily, my strength is being able to control myself in these situations. I have realized that now my annotations do not take full priority because now I can manage my work. My other artifact is my annotations. They show my improvement in thinking from the point of view of people in that time and how I am able to draw a connection between what I do and don't know.</p>
+      <p class="heading">I have two social studies artifacts. My social studies artifacts are my Farewell homework and my annotations. I am showing my Farewell homework, because two nights before it was due I felt really stressed out about it. Luckily, my strength is being able to control myself in these situations. I have realized that now my annotations do not take full priority because now I can manage my work. My other artifact is my annotations. They show my improvement in thinking from the point of view of people in that time and how I am able to draw a connection between what I do and don't know.</p>
       <h2 class="v"> Math</h2>
       <div class="center"><img src="images/IMG_0197.jpg">
           <img class="s" src="IMG_0199.JPG"></div>
       <p class="bb">My trigonometry homework and test.</p>
-    <p class="heading"> My math artifact is my notebook and a test. I am showing this to explain my stretch of reading comprehension. While it isn't a perfect representation, it explains how taking notes (annotations), helps me with my stretch.</p>
+    <p class="heading"> My math artifact is my notebook and a test. I am showing this to explain my stretch of reading comprehension. While it isn't a perfect representation, it explains how taking notes (annotations), helps me with my stretch. My test went well because of the notes.</p>
       <h2 class="v"> Spanish</h2>
       
   <div class="center">
