--- a/mystuff.html
+++ b/mystuff.html
@@ -22,7 +22,7 @@
       <p class="bb">My worst annotations on the right and my best on the left.</p><div class="center">
       <img class="z" src="IMG_0200.jpg"></div>
       <p class="e">My Farewell book homework.</p>
-      <p class="heading">I have two social studies artifacts. My social studies artifacts are my Farewell homework and my annotations. I am showing my Farewell homework, because two nights before it was due I felt really stressed out about it. Luckily, my strength is being able to control myself in these situations. I have realized that now my annotations do not take full priority because now I can manage my work. My other artifact is my annotations. They show my improvement in thinking from the point of view of people in that time and how I am able to draw a connection between what I do and don't know.</p>
+      <p class="heading">I have two social studies artifacts. My social studies artifacts are my Fairwell homework and my annotations. I am showing my Fairwell homework, because two nights before it was due I felt really stressed out about it. Luckily, my strength is being able to control myself in these situations. I have realized that now my annotations do not take full priority because now I can manage my work. My other artifact is my annotations. They show my improvement in thinking from the point of view of people in that time and how I am able to draw a connection between what I do and don't know.</p>
       <h2 class="v"> Math</h2>
       <div class="center"><img src="images/IMG_0197.jpg">
           <img class="s" src="IMG_0199.JPG"></div>
